type 수정
