# doc/swagger.json
@@ -62,7 +62,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/__object.o1"
+                  "$ref": "#/components/schemas/__type.o1"
                 }
               }
             }
@@ -83,7 +83,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/__type.o1"
+                "$ref": "#/components/schemas/__type.o2"
               }
             }
           },
@@ -171,7 +171,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/__object.o2"
+                  "$ref": "#/components/schemas/__type.o3"
                 }
               }
             }
@@ -291,10 +291,10 @@
         ],
         "x-tson_jsDocTags": []
       },
-      "__object.o1": {
+      "__type.o1": {
         "type": "object",
         "properties": {
-          "status": {
+          "statusCode": {
             "type": "number",
             "nullable": false
           },
@@ -305,12 +305,12 @@
         },
         "nullable": false,
         "required": [
-          "status",
+          "statusCode",
           "message"
         ],
         "x-tson_jsDocTags": []
       },
-      "__type.o1": {
+      "__type.o2": {
         "type": "object",
         "properties": {
           "email": {
@@ -651,10 +651,18 @@
         "nullable": false,
         "x-tson_jsDocTags": []
       },
-      "__object.o2": {
+      "__type.o3": {
         "type": "object",
-        "properties": {},
+        "properties": {
+          "id": {
+            "type": "number",
+            "nullable": false
+          }
+        },
         "nullable": false,
+        "required": [
+          "id"
+        ],
         "x-tson_jsDocTags": []
       }
     }
